@@ -43,6 +43,9 @@ $_lang['role_remove'] = 'Remove Role';
 $_lang['role_remove_confirm'] = 'Are you sure you want to remove this role?';
 $_lang['roles'] = 'Roles';
 $_lang['rrg_drag'] = 'Drag resources into resource groups here.';
+$_lang['selected_activate'] = 'Activate Selected';
+$_lang['selected_deactivate'] = 'Deactivate Selected';
+$_lang['selected_remove'] = 'Remove Selected';
 $_lang['ugc_mutate'] = 'User Group Access to Context';
 $_lang['ugc_grid_title'] = 'User Group Access to Contexts';
 $_lang['ugc_remove'] = 'Remove User Group Access to this Context';
@@ -147,6 +150,9 @@ $_lang['user_prevlogin'] = 'Last login';
 $_lang['user_profile_err_nf'] = 'FATAL ERROR: User profile not found.';
 $_lang['user_profile_err_save'] = 'An error occurred while attempting to save the user attributes.';
 $_lang['user_remove'] = 'Remove User';
+$_lang['user_remove_confirm'] = 'Are you sure you want to remove this user? This is irreversible!';
+$_lang['user_remove_multiple'] = 'Remove Multiple Users';
+$_lang['user_remove_multiple_confirm'] = 'Are you sure you want to remove these users? This is irreversible!';
 $_lang['user_remote_data_msg'] = 'Edit remote user data here.';
 $_lang['user_role_update'] = 'Update User Role';
 $_lang['user_setting_err_remove'] = 'An error occurred while removing user settings.';
